paperless-ngx/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
spec:
  replicas: 1
  selector: {}
  template:
    spec:
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-ngx-media
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-ngx-consume
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.5
          ports:
            - name: paperless
              containerPort: 8000
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data/data"
              name: paperless-data
            - mountPath: "/data/media"
              name: paperless-media
            - mountPath: "/data/consume"
              name: paperless-consume
